feat: add Arrow deserialization JMH benchmark infrastructure
Add sbt-jmh plugin and benchmark suite measuring ArrowDeserializer
throughput across 7 data types (int, string, decimal, timestamp,
nested struct, array, map) and mixed-column scenarios at varying
batch sizes (100/1000/10000 rows). Includes a GitHub Actions workflow
triggered on tag push and manual dispatch for regression detection.